Adding code for User API